--- a/src/pages/play/play.html
+++ b/src/pages/play/play.html
@@ -15,68 +15,41 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding [ngStyle]="{'background-image': 'url(' + backgroundImage +')'}">
+<ion-content padding>
   <div *ngIf="showAll">
-    <ion-list *ngIf="!showQuiz" [ngStyle]="{'background-image': 'url(' + backgroundImage +')'}">
-      <ion-item class="type" color="background">
-        <ion-label>
-          تبويبات الكويز
-        </ion-label>
-        <ion-select [(ngModel)]="quizType" interface="action-sheet" cancelText="إلغاء" color="background">
-          <ion-option value="all" selected (ionSelect)="hideSelects()">
-            كل التيويبات
-          </ion-option>
-          <ion-option value="cat" (ionSelect)="showCatSelects()">
-            تبويب رئيسي
-          </ion-option>
-          <ion-option value="subCat" (ionSelect)="showSubCatSelects()">
-            تبويب فرعي
-          </ion-option>
-        </ion-select>
-      </ion-item>
-
-      <ion-item class="type" *ngIf="showCatSelect" color="background">
-        <ion-label>
-          اختر التبويب
-        </ion-label>
-        <ion-select [(ngModel)]="selectedCat" interface="action-sheet" cancelText="إلغاء">
-          <ion-option *ngFor="let cat of catSelects" [value]="cat.value">
-            {{cat.name}}
-          </ion-option>
-        </ion-select>
-      </ion-item>
-
-      <ion-item class="type" *ngIf="showSubCatSelect" color="background">
-        <ion-label>
-          اختر التبويب الفرعي
-        </ion-label>
-        <ion-select [(ngModel)]="selectedSubCat" interface="action-sheet" cancelText="إلغاء">
-          <ion-option *ngFor="let cat of subCatSelects" [value]="cat.value">
-            {{cat.name}}
-          </ion-option>
-        </ion-select>
-      </ion-item>
-
-      <button class="typeBtn" ion-button (click)="getCompetitionQuestions()" color="primary" full>
-        العب!
+    <ion-list *ngIf="!showQuiz">
+      <ion-card color="background" class="start">
+        اختر التبويب الرئيسي، نقرتين، أوالتبويب الفرعي لنقرة واحدة لتبدأ اللعب
+      </ion-card>
+      <button ion-button block full class="startBtn" (click)="selectCat(null)">
+        كافة التبويبات
       </button>
+      <div *ngFor="let cat of mainCats">
+        <button ion-button block full class="startBtn" (click)="selectCat(cat)">
+          {{cat.displayNameArabic}}
+        </button>
+        <div *ngIf="cat.showMe">
+          <div *ngFor="let subCat of subCats">
+            <button ion-button block full color="choice" class="startBtn" (click)="selectSubCat(subCat)">
+              {{subCat.displayNameArabic}}
+            </button>
+          </div>
+        </div>
+      </div>
     </ion-list>
 
     <ion-list *ngIf="showQuiz">
       <progress-bar [progress]="progressValue" [text]=""></progress-bar>
-      <ion-item class="questionBar" [ngStyle]="{'background-image': 'url(' + backgroundImage +')'}" color="background">
+      <ion-item class="questionBar" color="background">
         <question-bar [answerArr]="userAnswerArr"></question-bar>
         <ion-badge item-end>{{userPoints}}</ion-badge>
       </ion-item>
 
       <ion-card>
-        <div class="imgContainer" [ngStyle]="{'background-image': 'url(' + backgroundImage +')'}" *ngIf="currentQuestion.imageUrl !== ''">
+        <div class="imgContainer" *ngIf="currentQuestion.imageUrl !== ''">
           <img [src]="imageBeg + currentQuestion.imageUrl + imageEnd">
         </div>
         <ion-card-content color="questioBck">
-          <!-- <progress-bar class='loadingBar' *ngIf="showLoadingBar" [progress]="loadingValue" [isQuestionContent]='true' [text]='loadingBarText'
-            [showProgress]='false'></progress-bar> -->
-          <!-- *ngIf="!showLoadingBar" -->
           <ion-card class='content1' color="questioBck"> {{questionIdx + 1}} - {{currentQuestion.content}} </ion-card>
         </ion-card-content>
       </ion-card>
